--- a/index.html
+++ b/index.html
@@ -6,29 +6,18 @@
   <head>
     <title>Rafa's Digital Business Card</title>
 
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
-
-      body {
-        display: grid;
-        place-items: center;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      a {
-        color: lightgray;
-        text-decoration: none;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Rafa Sinhoroto</h1>
-    <a href="https://www.instagram.com/rsinhoroto/">@rsinhoroto</a>
+    <main>
+      <div class="content">
+        <div class="avatar">
+          <img src="images/logo.png" alt="Selo Rocketseat" />
+          <img src="http://lorempixel.com/185/185/people/" alt="Foto Pessoal" />
+        </div>
+        <h1>Rafa Sinhoroto</h1>
+        <a href="https://www.instagram.com/rsinhoroto/">@rsinhoroto</a>
+      </div>
+    </main>
   </body>
 </html>
