Added SNS logos

--- a/index.html
+++ b/index.html
@@ -12,11 +12,38 @@
     <main>
       <div class="content">
         <div class="avatar">
-          <img src="images/logo.png" alt="Selo Rocketseat" />
+          <img src="images/logo.svg" alt="Selo Rocketseat" />
           <img src="http://lorempixel.com/185/185/people/" alt="Foto Pessoal" />
         </div>
         <h1>Rafa Sinhoroto</h1>
-        <a href="https://www.instagram.com/rsinhoroto/">@rsinhoroto</a>
+        <a href="https://github.com/RSinhoroto" target="_blank">
+          <img src="images/github.svg" alt="ícone Github" /> @rsinhoroto
+        </a>
+
+        <p>Wannabe Dancer with programming knowledge on the side</p>
+
+        <ul>
+          <li>
+            <a href="http://youtube.com" target="_blank"
+              ><img src="images/youtube.svg" alt="ícone Youtube" />
+            </a>
+          </li>
+          <li>
+            <a href="http://facebook.com" target="_blank"
+              ><img src="images/facebook.svg" alt="ícone Facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="http://instagram.com" target="_blank"
+              ><img src="images/instagram.svg" alt="ícone Instagram"
+            /></a>
+          </li>
+          <li>
+            <a href="http://twitter.com" target="_blank"
+              ><img src="images/twitter.svg" alt="ícone Twitter"
+            /></a>
+          </li>
+        </ul>
       </div>
     </main>
   </body>
