--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
     <title>Rafa's Digital Business Card</title>
 
     <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <main>
-      <div class="content">
+      <div class="container">
         <div class="avatar">
-          <img src="images/logo.svg" alt="Selo Rocketseat" />
+          <span>
+            <img src="images/logo.svg" alt="Selo Rocketseat" />
+          </span>
+
           <img src="http://lorempixel.com/185/185/people/" alt="Foto Pessoal" />
         </div>
         <h1>Rafa Sinhoroto</h1>
         <a href="https://github.com/RSinhoroto" target="_blank">
-          <img src="images/github.svg" alt="ícone Github" /> @rsinhoroto
+          <img src="images/github.svg" alt="ícone Github" />   RSinhoroto
         </a>
 
         <p>Wannabe Dancer with programming knowledge on the side</p>
@@ -34,12 +42,12 @@
             /></a>
           </li>
           <li>
-            <a href="http://instagram.com" target="_blank"
+            <a href="https://www.instagram.com/rsinhoroto/" target="_blank"
               ><img src="images/instagram.svg" alt="ícone Instagram"
             /></a>
           </li>
           <li>
-            <a href="http://twitter.com" target="_blank"
+            <a href="http://twitter.com/rsinhoroto" target="_blank"
               ><img src="images/twitter.svg" alt="ícone Twitter"
             /></a>
           </li>
