--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="pt_BR">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Rafa's Digital Business Card</title>
 
     <link rel="stylesheet" href="style.css" />
