Updated template formatting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Rafa's Digital Business Card</title>
+    <title id="cardTitle">User's Digital Business Card</title>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -26,10 +26,10 @@
 
           <img id="cardPhoto" src="https://placekitten.com/185/185" alt="Foto Pessoal" />
         </div>
-        <h1 id="cardName">Rafa Sinhoroto</h1>
-        <a id="cardLink" href="https://github.com/RSinhoroto" target="_blank">
+        <h1 id="cardName">Name Lastname</h1>
+        <a id="cardLink" href="https://github.com/" target="_blank">
           <img id="cardLinkImg" src="images/github.svg" alt="ícone Github" /> 
-          <span id="cardUser">RSinhoroto</span>
+          <span id="cardUser">cardUser</span>
         </a>
 
         <p id="cardBio">Wannabe Dancer with programming knowledge on the side</p>
