--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="theme-color" content="#8000FF">
     <title id="cardTitle">User's Digital Business Card</title>
+    <link rel="shortcut icon" href="images/logo.png" type="image/png">
 
     <link rel="stylesheet" href="style.css" />
 
