Added nametag strap visual

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
   </head>
   <body>
     <main>
+      <div class="card-strap">
+        <img src="images/faixa.svg" alt="faixa do catão">
+      </div>
+
       <div class="container">
+        <div class="card-strap-pocket">
+          <img src="images/quebra.svg" alt="">
+        </div>
         <div class="avatar">
           <span>
             <img src="images/logo.svg" alt="Selo Rocketseat" />
@@ -34,7 +41,7 @@
           <span id="cardUser">cardUser</span>
         </a>
 
-        <p id="cardBio">Wannabe Dancer with programming knowledge on the side</p>
+        <p id="cardBio">User's bio goes here</p>
 
         <ul id="socialLinks">
           <li class="youtube">
