Added tiktok option to the social media list

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
               ><img src="images/youtube.svg" alt="ícone Youtube" />
             </a>
           </li>
-          <li class="facebook">
-            <a href="http://facebook.com" target="_blank"
-              ><img src="images/facebook.svg" alt="ícone Facebook"
+          <li class="tiktok">
+            <a href="http://tiktok.com" target="_blank"
+              ><img src="images/tiktok.svg" alt="ícone Tiktok"
             /></a>
           </li>
           <li class="instagram">
